creo boton debajo de labels para que haga la multiplicacion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
               </div>
               <div>
-                <input type="number" class="form-control labelSection" id="exampleFormControlInput1" placeholder="Ingrese un numero...">
+                <input type="number" class="form-control labelSection" id="labelCambiador1" placeholder="Ingrese un numero...">
               </div>
             </div>
 
@@ -57,15 +57,23 @@
                   <li><a class="dropdown-item" href="#">Peso Argentino</a></li>
                 </ul>
               </div>
-              <input type="number" class="form-control labelSection" id="exampleFormControlInput1" placeholder="Ingrese un numero...">
+              <input type="" class="form-control labelSection" id="labelCambiador2" placeholder="Total del intercambio...">
             </div>
 
 
             
           </div>
         </div>
+        
       </section>
 
+
+    <div class="contenedorDeBoton">
+      <button class="botonIntercambio">Intercambiar</button>
+
+    </div>
+
+  
       <section>
         <div class="container">
           <div class="card">
