logica del intercambio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </select>
               </div>
               <div>
-                <input type="number" class="form-control labelSection" id="labelCambiador1" placeholder="Ingrese un numero...">
+                <input type="number" class="form-control labelSection" id="inputMonto" placeholder="Ingrese un numero...">
               </div>
             </div>
 
@@ -55,7 +55,7 @@
                   <option value="PesosArg">Pesos Argentinos</option>
                 </select>
               </div>
-              <label class="labelSection" for="number"></label>
+              <label class="labelSection labelTotal labelSection" for="number" id="labelFinal">d</label>
             </div>
 
 
