agrego el local storage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <option value="PesosArg">Pesos Argentinos</option>
                 </select>
               </div>
-              <label class="labelSection labelTotal labelSection" for="number" id="labelFinal">d</label>
+              <label class="labelSection labelTotal labelSection" for="number" id="labelFinal"></label>
             </div>
 
 
